# diploma

./: .gitignore  README.md  make.sh
Attachments/: Otzyv.doc  Retsenzia.docx  Vedomost.doc
Practice/: CMakeLists.txt  Constraint.h  ConstraintList.h  EllipsoidMethod.h  EllipsoidsMethod.h  Function.h  Matrix.h  ParallelHandler.cpp  ParallelHandler.h  Point.h  Sample.cpp  Specializations.h  Subgradient.h  build.sh  debug.sh  main.cpp  parallel_for.h
Practice/Debug/: PrintMatrix.h
Practice/HelperClasses/: HelperClasses.h  Logger.cpp  Logger.h  MatrixMultiplier.h  MatrixOperationPerformer.h  MatrixPrinter.cpp  MatrixPrinter.h  MatrixRandomFiller.h  MatrixSummarizer.h  MatrixTransposer.h  Statistics.cpp  Statistics.h  Time.h  TimeMeasurer.cpp  TimeMeasurer.h
Practice/Tests/: ConstructionTest.cpp  ConstructionTest.h  EllipsoidMethodTest.cpp  EllipsoidMethodTest.h  EllipsoidsMethodTest.cpp  EllipsoidsMethodTest.h  Example.h  Example1.h  Example2.h  MatrixTest.cpp  MatrixTest.h
Practice/Tests/Results/: Acceleration statistics  EM_test_2_threads  EM_test_8_threads  EmTestPlot.R  EmTime.R  MatSizeResult.R  MultAcc.R  MultPlot.R  Multithreading statistics  Size: 500, Threads: 1  Size: 500, Threads: 2  Size: 500, Threads: 4  Size: 500, Threads: 6  Size: 500, Threads: 8  SumAcc.R  SumPlot.R  ThrNum.R
Practice/Utilities/: MatrixUtilities.cpp  MatrixUtilities.h
Theory/: Annotation.tex  Bibliography.tex  Diploma.tex  Intro.tex  Outro.tex  SusuHeader.tex  Task.tex  Title.tex
Theory/Paper/: 1_EllipsoidMethod.tex  2_Implementation.tex  2_Untitled.tex  3_EmImplementation.tex  Annotation.tex  Appendices.tex  AppendixEllipsoidsMethod.tex  AppendixMatrixSource.tex  AppendixMatrixTestSource.tex  Bezborodov.tex  Bezborodov_Diploma_Parallel_implementation_of_the_ellipsoid_method_for_optimization_problems_of_large_dimension.tex  Bezborodov_Diploma_Parallel_implementation_of_the_ellipsoids_method_for_optimization_problems_of_large_dimension.tex  Bibliography.bib  Bibliography.tex  DateField.tex  Fjm.tex  (+30 more)
(+88 files in other folders)
